# pcs

esercitazione1/: CMakeLists.txt  input_es1.txt  printargs.cpp  temp.cpp
esercitazione2/: CMakeLists.txt  alg.cpp  array.cpp  array2.cpp
esercitazione3/: CMakeLists.txt  main.cpp  rational.hpp
